# libcbdetect

./: .gitignore  .gitmodules  pyproject.toml
include/libcbdetect/: get_init_location.h
src/bindings/: cbdetect_py.cc
src/cbdetect_py/: __init__.py  cbdetect_py.pyi
tests/: test_libcbdetect.py
