[build-system]
requires = ["scikit_build_core[rich]", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "cbdetect_py"
version = "0.0.1"
description="Corner detector"
readme = "README.md"
authors = [
  # { name = "My Name", email = "me@email.com" },
]
requires-python = ">=3.7"

[tool.scikit-build]
sdist.include = ["src/cbdetect_py.pyi"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cbdetect_py = { path = ".", editable = true }
cvnp = { path = "./external/cvnp", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cxx-compiler = ">=1.7.0,<1.8"
scikit-build-core = ">=0.9.3,<0.10"
cmake = ">=3.29.2,<3.30"
pybind11 = ">=2.12.0,<2.13"
pytest = ">=8.2.0,<8.3"
opencv = ">=4.9.0,<4.10"
python = ">=3.12.3,<3.13"
